# advent-of-code-2025

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  Taskfile.yml  conanfile.txt
.github/workflows/: lint.yml  test.yml
.zed/: debug.json
src/: day1.c  day1.h  day2.c  day2.h  day3.c  day3.h  dynamic-array.c  dynamic-array.h  main.c  utils.c  utils.h
test/: CUnit.c  CUnit.h  day1.c  day1.h  day2.c  day2.h  day3.c  day3.h  main.c
test/data/day1/: it_can_turn_left_a_small_amount.txt  it_can_turn_left_and_land_on_zero.txt  it_can_turn_left_and_pass_zero.txt  it_can_turn_left_by_over_100_and_land_on_zero.txt  it_can_turn_left_by_over_100_and_miss_zero.txt  it_can_turn_left_from_zero_a_small_amount.txt  it_can_turn_left_from_zero_and_pass_zero.txt  it_can_turn_right_by_over_100_and_land_on_zero.txt  it_can_turn_right_by_over_100_and_miss_zero.txt  it_can_turn_right_from_zero_a_small_amount.txt  it_can_turn_right_from_zero_and_land_on_zero.txt  it_can_turn_right_from_zero_and_pass_zero.txt
